# metrics-dashboard

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/metrics_dashboard/: app.py  utils.py
src/metrics_dashboard/pages/: analytics.py
