[project]
name = "metrics-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash-auth>=2.3.0",
    "dash>=2.18.2",
    "sqlalchemy>=2.0.38",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "jupyter>=1.1.1",
]
